--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.5",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.12.0",
@@ -18,6 +22,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
+    "typescript": "^5.4.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
