--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
+    "clsx": "^2.1.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.12.0",
     "react": "^18.2.0",
