--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.12.5",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
+    "ahooks": "^3.7.11",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "lodash.debounce": "^4.0.8",
